test/expected/explain_sto_parens_2i_v-cpp20.out
explain static void operator()(int, int)
                  ^
19: error: operator "()" can not be "static" until C++23
